--- a/etc/cas.cfg
+++ b/etc/cas.cfg
@@ -1,5 +1,6 @@
 contextSource.userDn=cn=admin,dc=cas,dc=server
 contextSource.password=root
+contextSource.urls=ldap://localhost:389
 
 bindLdapAuthenticationHandler.filter=cn=%u
 bindLdapAuthenticationHandler.searchBase=dc=cas,dc=server
